[gd_scene load_steps=7 format=3 uid="uid://g3uwk71a6ncq"]

[ext_resource type="Script" path="res://Scenes/Scripts/lobby.gd" id="1_gt7ek"]
[ext_resource type="FontFile" uid="uid://d4dc84pifcc58" path="res://Fonts/VT323_font/VT323-Regular.ttf" id="2_iairk"]
[ext_resource type="Texture2D" uid="uid://dot3y5xqlq8gk" path="res://art/Main_menu/background.png" id="3_0cl52"]
[ext_resource type="Script" path="res://Scenes/Scripts/ChangeTeamBtn.gd" id="4_5r57y"]
[ext_resource type="Script" path="res://Scenes/Scripts/LeaveBtn.gd" id="5_mmpa3"]
[ext_resource type="Script" path="res://Scenes/Scripts/ReadyBtn.gd" id="6_afi0v"]

[node name="LobbyControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gt7ek")

[node name="BlueTeamContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 180)
layout_mode = 2
offset_left = 580.0
offset_top = 350.0
offset_right = 780.0
offset_bottom = 528.0
scale = Vector2(0.25, 0.25)

[node name="ItemListBlue" type="ItemList" parent="BlueTeamContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/v_separation = 10
auto_height = true
same_column_width = true
fixed_column_width = 200
icon_mode = 0

[node name="RedTeamContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 180)
layout_mode = 2
offset_left = 730.0
offset_top = 350.0
offset_right = 930.0
offset_bottom = 528.0
scale = Vector2(0.25, 0.25)

[node name="ItemListRed" type="ItemList" parent="RedTeamContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/v_separation = 10
auto_height = true
same_column_width = true
fixed_column_width = 200
icon_mode = 0

[node name="ErrorLbl" type="Label" parent="."]
z_index = 4
layout_mode = 0
offset_left = 482.0
offset_top = 380.0
offset_right = 2102.0
offset_bottom = 470.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(1, 0.870588, 0.870588, 1)
theme_override_colors/font_shadow_color = Color(0.67451, 0.156863, 0.141176, 1)
theme_override_fonts/font = ExtResource("2_iairk")
theme_override_font_sizes/font_size = 50
text = "Can only ready up with 3 players on each team"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CodeLbl" type="Label" parent="."]
z_index = 4
layout_mode = 0
offset_left = 585.0
offset_top = 420.0
offset_right = 981.0
offset_bottom = 510.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(1, 0.870588, 0.870588, 1)
theme_override_fonts/font = ExtResource("2_iairk")
theme_override_font_sizes/font_size = 90
text = "Lobby code:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameCode" type="Label" parent="."]
z_index = 4
layout_mode = 2
offset_left = 570.0
offset_top = 440.0
offset_right = 858.0
offset_bottom = 530.0
scale = Vector2(0.25, 0.25)
mouse_filter = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.870588, 0.870588, 1)
theme_override_fonts/font = ExtResource("2_iairk")
theme_override_font_sizes/font_size = 90
text = "XXXX0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RedLbl" type="Label" parent="."]
z_index = 4
layout_mode = 0
offset_left = 700.0
offset_top = 300.0
offset_right = 1132.0
offset_bottom = 390.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0.921569, 0.278431, 0.278431, 1)
theme_override_fonts/font = ExtResource("2_iairk")
theme_override_font_sizes/font_size = 90
text = "Red"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlueLbl" type="Label" parent="."]
z_index = 4
layout_mode = 2
offset_left = 550.0
offset_top = 300.0
offset_right = 982.0
offset_bottom = 390.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0.670588, 0.788235, 1, 1)
theme_override_fonts/font = ExtResource("2_iairk")
theme_override_font_sizes/font_size = 90
text = "Blue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(735, 468)
scale = Vector2(0.680645, 0.680645)
texture = ExtResource("3_0cl52")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(684, 386)

[node name="ChangeTeamBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 657.0
offset_top = 362.0
offset_right = 768.0
offset_bottom = 393.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_iairk")
text = "Change team"
script = ExtResource("4_5r57y")

[node name="LeaveBtn" type="Button" parent="."]
layout_mode = 2
offset_left = 690.0
offset_top = 440.0
offset_right = 795.0
offset_bottom = 471.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_iairk")
text = "Leave Lobby"
script = ExtResource("5_mmpa3")

[node name="ReadyBtn" type="Button" parent="."]
layout_mode = 2
offset_left = 758.0
offset_top = 440.0
offset_right = 858.0
offset_bottom = 471.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_iairk")
text = "Ready up"
script = ExtResource("6_afi0v")

[connection signal="gui_input" from="GameCode" to="." method="_on_game_code_gui_input"]
[connection signal="pressed" from="ChangeTeamBtn" to="ChangeTeamBtn" method="_on_pressed"]
[connection signal="pressed" from="LeaveBtn" to="LeaveBtn" method="_on_pressed"]
[connection signal="pressed" from="ReadyBtn" to="ReadyBtn" method="_on_pressed"]
